--- a/_resource/overrides/partials/edit.html
+++ b/_resource/overrides/partials/edit.html
@@ -14,11 +14,11 @@
 
     <!-- Contributing Guide below, smaller -->
     <a href="https://github.com/percona/proxysql-admin-tool-doc/blob/main/contributing.md"
-       title="Contributing Guide"
+       title="Contributing guide"
        class="contrib-link"
        target="_blank"
        rel="noopener">
-      Contributing Guide
+      Contributing guide
     </a>
   </div>
 </div>
